# Open3DSG

./: .gitignore  3rd_party_licenses.txt  CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  pyproject.toml  requirements.txt
open3dsg/: __init__.py
open3dsg/config/: config.py  define.py
open3dsg/data/: gen_scannet_subgraphs.py  get_object_frame.py  open_dataset.py  pcl_augmentations.py  preprocess_3rscan.py  preprocess_scannet.py
open3dsg/helpers/: download_3rscan_meta.sh  download_scannet_meta.sh  nature_adjectives.txt  nature_words.txt
open3dsg/models/: LLaVA  blip_patch_projector.py  custom_instruct_blip.py  layers.py  network_GNN.py  network_PointNet.py  network_util.py  networks_base.py  op_utils.py  pointnet.py  pointnet2.py  pointnet2_utils.py  sgpn.py
open3dsg/scripts/: __init__.py  eval.py  run.py  trainer.py
open3dsg/util/: dataLoaderScanNet.py  lightning_callbacks.py  plotting_utils.py  scannet200.py  scannet200_constants.py  scannet200_splits.py  util_data.py  util_eva.py  util_label.py  util_misc.py  util_ply.py  util_search.py  utils_scannet.py
